Fix page component background on Mobile

--- a/src/components/pages/home/index.module.scss
+++ b/src/components/pages/home/index.module.scss
@@ -8,4 +8,10 @@
   background-color: $background-color;
 
   @include flex-default();
+
+  @media (max-width: 480px) {
+    & {
+      width: 100%;
+    }
+  }
 }
